Arreglos de enlaces Pagina Home

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           </ul>
         </nav>
       </header>
-      <section class="contenedor-section" id="nosotros">
+      <section class="contenedor-section">
           <h1 class="no-margin centrar-texto">D/E\V <span>Developer entertainment</span></h1>
           <div class="section-contenido"> 
               <div class="section-contenido-texto" id="nosotros">
@@ -52,7 +52,7 @@
         </div>
       </section>
 
-      <main class="main" id="proyectos">
+      <main class="main">
         <div class="section-contenido gap">
             <img src="img/img2.png" alt="IMAGEN" class="section-contenido-img img-2"> 
             <div class="section-contenido-texto" id="nosotros">
