--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
           </label>
           <a href="index.html" class="logo"> D/E\V </a>
           <ul class="navlinks">
-            <li><a href="index.html">HOME</a></li>
+            <li><a href="home.html">HOME</a></li>
             <li><a href="proyectos.html">PROYECTOS</a></li>
             <li><a href="">NOSOTROS</a></li>
             <li><a href="contacto.html">CONTACTO</a></li>
@@ -75,11 +75,11 @@
 
       <footer class="footer">
            <div class="no-margin redesociales">
-              <a href="" class="redes-sociales instagram"><i class="fab fa-instagram"></i></a>
-              <a href="" class="redes-sociales facebook"><i class="fab fa-facebook-f"></i></a>
-              <a href="" class="redes-sociales twitter"><i class="fab fa-twitter"></i></a>
-              <a href="" class="redes-sociales linkedin"> <i class="fab fa-linkedin-in"></i></a>
-              <a href="" class="redes-sociales github"> <i class="fab fa-github-alt"></i></a>
+              <a href="https://www.instagram.com/marcos.marano/" class="redes-sociales instagram" target="_blank"><i class="fab fa-instagram" ></i></a>
+              <a href="https://www.facebook.com/marcos.marano.50/" class="redes-sociales facebook" target="_blank"><i class="fab fa-facebook-f" ></i></a>
+              <a href="#" class="redes-sociales twitter"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.linkedin.com/in/marcos-marano-2b560819a/" class="redes-sociales linkedin" target="_blank"> <i class="fab fa-linkedin-in"></i></a>
+              <a href="https://github.com/Marcos-Marano" class="redes-sociales github" target="_blank"> <i class="fab fa-github-alt"></i></a>
            </div>
           <div class="footer-logo">
             <a href="index.html" class="logo"> D/E\V </a>
