Arreglos Hover Button Index

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="contenedor-index head">
             <h1 class="titulo hvr-icon-forward ">D/E\V <span>Developer entertainment</span></h1>
             <p class="copy">¿Que esperas para avanzar? </p>
-            <div class="btn btn-one centrar-texto " id="btn">
+            <div class="btn-index centrar-texto " id="btn">
               <span class="color-btn-index">Suscríbete</span>
              </div>
         </div>
