Proyecto Integrador finalizado

--- a/proyectos.html
+++ b/proyectos.html
@@ -28,9 +28,9 @@
           <ul class="navlinks">
             <li><a href="home.html">HOME</a></li>
             <li><a href="proyectos.html">PROYECTOS</a></li>
-            <li><a href="">NOSOTROS</a></li>
+            <li><a href="nosotros.html">NOSOTROS</a></li>
             <li><a href="contacto.html">CONTACTO</a></li>
-            <li><a href="iniciarsecion.html" class="iniciarsecion">INICIAR SESION</a></li>
+            <li><a href="iniciarsesion.html" class="iniciarsecion">INICIAR SESION</a></li>
           </ul>
         </nav>
       </header>
