--- a/contacto.html
+++ b/contacto.html
@@ -28,9 +28,9 @@
           <ul class="navlinks">
             <li><a href="home.html">HOME</a></li>
             <li><a href="proyectos.html">PROYECTOS</a></li>
-            <li><a href="">NOSOTROS</a></li>
+            <li><a href="nosotros.html">NOSOTROS</a></li>
             <li><a href="contacto.html">CONTACTO</a></li>
-            <li><a href="iniciarsecion.html" class="iniciarsecion">INICIAR SESION</a></li>
+            <li><a href="iniciarsesion.html" class="iniciarsecion">INICIAR SESION</a></li>
           </ul>
         </nav>
       </header>
@@ -76,7 +76,7 @@
             </div>
 
             <div class="campo">
-                <input type="submit" value="Enviar" class="boton-contacto boton--primario">
+                <input type="submit" value="Enviar" class="boton-contacto">
             </div>
         </form>
    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d194347.38441029825!2d-3.8196196483803653!3d40.43813107973299!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd422997800a3c81%3A0xc436dec1618c2269!2zTWFkcmlkLCBFc3Bhw7Fh!5e0!3m2!1ses-419!2sar!4v1629312990132!5m2!1ses-419!2sar" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="mapa"></iframe>
